search_artist 코드 수정